<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:viewBindingIgnore="true"
    android:orientation="vertical"
    tools:context=".ui.apropos.AproposFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif"
                android:text="@string/instn_madagascar"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#004D40"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="serif"
                android:text="Département de Radioprotection"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />
        </LinearLayout>
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_weight="0.8"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:lineSpacingExtra="10sp"
                android:text="@string/nos_mandats"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#880E4F"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="serif"
                android:justificationMode="inter_word"
                android:text="@string/nos_mandatsT"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:lineSpacingExtra="10sp"
                android:text="@string/application"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#880E4F"
                android:textSize="20sp"
                android:typeface="monospace" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="serif"
                android:justificationMode="inter_word"
                android:text="@string/applicationT"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:autoLink="phone"
                android:fontFamily="serif"
                android:justificationMode="inter_word"
                android:linksClickable="true"
                android:text="Nous contacter:\nTél: +261 20 24 714 03"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/hyp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="65dp"
                android:autoLink="web"
                android:fontFamily="serif"
                android:justificationMode="inter_word"
                android:linksClickable="true"
                android:text="http://instn.recherches.gov.mg"
                android:textAlignment="gravity"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>